IFS-2972 - removed localhost from test to prevent environment-specific failures